@@ -23,7 +23,7 @@
  *
  * @package Genmod
  * @subpackage Blocks
- * @version $Id: html_block.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: html_block.php 37 2017-01-31 08:44:35Z Boudewijn $
  */
 
 $GM_BLOCKS["print_html_block"]["name"]        = GM_LANG_html_block_name;
