@@ -24,7 +24,7 @@
  *
  * @package Genmod
  * @subpackage Charts
- * @version $Id: clippings.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: clippings.php 37 2017-01-31 08:44:35Z Boudewijn $
  */
 
 /**
