@@ -20,7 +20,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * @package Genmod
- * @version $Id: menubar.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: menubar.php 37 2017-01-31 08:44:35Z Boudewijn $
  */
 
 /**
