@@ -23,7 +23,7 @@
  *
  * @package Genmod
  * @subpackage Themes
- * @version $Id: style.css 36 2016-12-24 06:47:36Z Boudewijn $
+ * @version $Id: style.css 38 2017-02-06 10:04:56Z Boudewijn $
  */
 
 .something {
